<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_16sdp"
    tools:context=".ui.login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/_64sdp"
            android:layout_height="@dimen/_64sdp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/_8sdp"
            android:src="@drawable/img_belajaryuk_reverse"
            tools:ignore="ContentDescription" />

        <TextView
            style="@style/MyHeaderTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_4sdp"
            android:text="@string/welcome" />

        <TextView
            style="@style/MyBodyTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_tag_line"
            android:textAlignment="center"
            android:textStyle="italic" />

        <LinearLayout
            android:id="@+id/form_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="ExtraText">

            <EditText
                android:id="@+id/et_email"
                style="@style/MyThemeRegisterEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_edit_text_login"
                android:drawableEnd="@drawable/ic_mail"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                tools:ignore="Deprecated" />

            <EditText
                android:id="@+id/et_password"
                style="@style/MyThemeRegisterEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_edit_text_login"
                android:drawableEnd="@drawable/ic_lock_outline"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                tools:ignore="Deprecated" />

            <Button
                android:id="@+id/btn_login"
                style="@style/MyThemeButton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_42sdp"
                android:layout_margin="@dimen/_8sdp"
                android:background="@drawable/background_button_login_splash"
                android:onClick="doLogin"
                android:text="@string/prompt_login"
                android:textColor="@color/colorWhite" />

            <TextView
                android:id="@+id/tv_signup"
                style="@style/MyBodyTextView"
                android:onClick="openSignupActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/prompt_signup_now" />
        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/pb_login"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="@dimen/_36sdp"
        android:layout_height="@dimen/_36sdp"
        android:layout_centerInParent="true"
        android:layout_gravity="center_horizontal"
        android:foregroundGravity="bottom"
        android:visibility="gone" />

</RelativeLayout>
