<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="@dimen/_4sdp"
    android:orientation="vertical"
    android:padding="@dimen/_16sdp">

    <TextView
        android:id="@+id/tv_report_kegiatan"
        style="@style/MyThemeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8sdp"
        android:onClick="doReportKegiatan"
        android:text="@string/prompt_report" />

    <TextView
        android:id="@+id/tv_copy_kegiatan"
        style="@style/MyThemeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8sdp"
        android:onClick="doCopyUrlKegiatan"
        android:text="@string/copy_link" />

    <TextView
        android:id="@+id/tv_phone_penyelenggara"
        style="@style/MyThemeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8sdp"
        android:onClick="doCallPenyelenggara"
        android:text="@string/example_phone" />

    <TextView
        android:id="@+id/tv_email_penyelenggara"
        style="@style/MyThemeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8sdp"
        android:onClick="doEmailPenyelenggara"
        android:text="@string/example_email" />
</LinearLayout>