<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/_8sdp">

    <TextView
        style="@style/MyBodyTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_marginRight="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/prompt_title_cancel"
        android:textSize="@dimen/_18sdp" />

    <TextView
        style="@style/MyBodyTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_12sdp"
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_marginRight="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:text="@string/prompt_cancel"
        android:textSize="@dimen/_12sdp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_yes_cancel_belajaryuk"
            style="@style/MyBodyTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_8sdp"
            android:layout_marginLeft="@dimen/_8sdp"
            android:layout_marginRight="@dimen/_8sdp"
            android:layout_weight="1"
            android:background="@drawable/background_layout_rounded"
            android:backgroundTint="@color/colorSoftGreen"
            android:text="@string/prompt_yes"
            android:textColor="@color/colorWhite"
            tools:ignore="ContentDescription" />

        <Button
            android:id="@+id/btn_no_cancel_belajaryuk"
            style="@style/MyBodyTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_8sdp"
            android:layout_marginLeft="@dimen/_8sdp"
            android:layout_marginRight="@dimen/_8sdp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorSoftRed"
            android:background="@drawable/background_layout_rounded"
            android:text="@string/prompt_no"
            android:textColor="@color/colorWhite"
            tools:ignore="ContentDescription" />
    </LinearLayout>

</LinearLayout>