<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_item_pertanyaan"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_course_pertanyaan"
        style="@style/MyCaptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_16sdp"
        android:layout_marginRight="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:text="@string/example_course"
        android:textAllCaps="true" />

    <TextView
        android:id="@+id/tv_title_pertanyaan"
        style="@style/MyBodyTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_16sdp"
        android:layout_marginRight="@dimen/_16sdp"
        android:text="@string/title"
        android:textSize="@dimen/_16sdp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_8sdp"
        android:layout_marginLeft="@dimen/_16sdp"
        android:layout_marginRight="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_photo_user"
            android:layout_width="@dimen/_28sdp"
            android:layout_height="@dimen/_28sdp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:src="@drawable/img_placeholder" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_toEndOf="@id/iv_photo_user"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_name_user"
                style="@style/MyBodyTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/example_name" />

            <TextView
                android:id="@+id/tv_created_pertanyaan"
                style="@style/MyCaptionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/example_time" />
        </LinearLayout>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_divider"
        android:background="@color/colorDarkGrey" />
</LinearLayout>