<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/_4sdp"
    android:layout_marginLeft="@dimen/_8sdp"
    android:layout_marginRight="@dimen/_8sdp"
    android:layout_marginTop="@dimen/_4sdp"
    app:cardCornerRadius="@dimen/_6sdp"
    app:cardElevation="@dimen/_4sdp"
    tools:context=".ui.belajaryuk.BelajaryukOrderConfirmActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">

            <TextView
                style="@style/MyBodyTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:padding="@dimen/_8sdp"
                android:text="@string/prompt_payment_detail" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorLightGrey"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    style="@style/MyBodyTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:drawablePadding="@dimen/_8sdp"
                    android:drawableStart="@drawable/ic_person"
                    android:drawableTint="@color/colorAccent"
                    android:gravity="center_vertical"
                    android:padding="@dimen/_8sdp"
                    android:text="@string/example_name"
                    tools:ignore="RelativeOverlap,UnusedAttribute" />

                <TextView
                    style="@style/MyBodyTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical"
                    android:padding="@dimen/_8sdp"
                    android:text="@string/example_price"
                    tools:ignore="RelativeOverlap,UnusedAttribute" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    style="@style/MyBodyTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:drawablePadding="@dimen/_8sdp"
                    android:drawableStart="@drawable/ic_access_time"
                    android:drawableTint="@color/colorAccent"
                    android:gravity="center_vertical"
                    android:padding="@dimen/_8sdp"
                    android:text="@string/prompt_session"
                    tools:ignore="RelativeOverlap,UnusedAttribute" />

                <TextView
                    style="@style/MyBodyTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical"
                    android:padding="@dimen/_8sdp"
                    android:text="@string/example_number"
                    tools:ignore="RelativeOverlap,UnusedAttribute" />
            </RelativeLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_layout_confirm_order_title">

            <TextView
                style="@style/MyHeaderTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_14sdp"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:padding="@dimen/_8sdp"
                android:text="@string/prompt_total_price"
                tools:ignore="RelativeOverlap,UnusedAttribute" />

            <TextView
                style="@style/MyBodyTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:padding="@dimen/_8sdp"
                android:text="@string/example_price"
                tools:ignore="RelativeOverlap,UnusedAttribute" />
        </RelativeLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>