<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sv_detail_kesiniyuk"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.kesiniyuk.KesiniyukDetailActivity"
    tools:showIn="@layout/activity_kesiniyuk_detail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title_detail_kegiatan"
            style="@style/MyHeaderTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_8sdp"
            android:layout_marginLeft="@dimen/_16sdp"
            android:layout_marginRight="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="@string/title"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iv_photo_detail_kegiatan"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_190sdp"
            android:background="@color/colorDarkGrey"
            android:scaleType="centerCrop"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_8sdp"
            android:background="@color/colorAccent"
            android:orientation="horizontal"
            android:padding="@dimen/_6sdp"
            app:layout_anchor="@+id/iv_photo_kegiatan"
            app:layout_anchorGravity="bottom">

            <TextView
                android:id="@+id/tv_time_detail_kegiatan"
                style="@style/MyCaptionTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/example_time"
                android:textColor="@color/colorWhite" />

            <TextView
                android:id="@+id/tv_location_detail_kegiatan"
                style="@style/MyCaptionTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="3"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/example_address"
                android:textColor="@color/colorWhite" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_content_detail_kegiatan"
            style="@style/MyBodyTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_8sdp"
            android:layout_marginLeft="@dimen/_16sdp"
            android:layout_marginRight="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:fontFamily="serif"
            android:text="@string/lorem" />
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
